# the-most-notourius-mvp-ever

./: .env.example  .gitignore  README.md  VISION.md  baseimg.dockerfile  docker-compose.yml  parser.dockerfile  predictor.dockerfile  tgbot.dockerfile
.static/: kazan.csv  moscow_flats.csv  untitled6.py
parser/: pyproject.toml
parser/cian/cian/: items.py  settings.py
parser/cian/cian/middlewares/: cookies.py  impersonate.py
parser/cian/cian/middlewares/fake_useragent/: __init__.py  providers.py
parser/cian/cian/spiders/: cian_spider.py
predictor/: app.py  pyproject.toml  settings.py
tgbot/: main.py  pyproject.toml
