[tool.poetry]
name = "parser"
version = "0.1.0"
description = ""
authors = ["Albert Namaev <anamaev263@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.12.0"
scrapyrt = "^0.16.0"
uvloop = "^0.21.0"
chompjs = "^1.3.0"
zstandard = "^0.23.0"
brotli = "^1.1.0"
faust-cchardet = "^2.1.19"
fake-useragent = "^1.5.1"
faker = "^33.1.0"
twisted = {extras = ["http2"], version = "^24.11.0"}
scrapy-impersonate = "^1.4.1"
orjson = "^3.10.12"


[tool.poetry.group.dev.dependencies]
devtools = "^0.12.2"
ruff = "^0.8.1"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
