[tool.poetry]
name = "predictor"
version = "0.1.0"
description = ""
authors = ["Albert Namaev <anamaev263@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.5"}
xgboost = "^2.1.3"
joblib = "^1.4.2"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"
mypy = "^1.8.0"
devtools = "^0.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
